objects/ChargentOrders__Chargent_Automated_Collections_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>ChargentOrders__Email_Template__c</fullName>
        <label>Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Retry_On_Day__c</fullName>
        <label>Retry On Day</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Retry_Option__c</fullName>
        <label>Retry Option</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Sender_Email_Address__c</fullName>
        <description>Organization wide email address for sending AC emails.</description>
        <inlineHelpText>Organization wide email address for sending AC emails.</inlineHelpText>
        <label>Sender Email Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Stage__c</fullName>
        <label>Stage</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Chargent Automated Collections Mapping</label>
</CustomObject>